Fix hero title height on mobile

--- a/html-export/css/main.css
+++ b/html-export/css/main.css
@@ -300,7 +300,7 @@ img {
   .hero-title {
     position: absolute;
     width: 400px;
-    height: 90px;
+    height: auto;
     left: 20px;
     top: 10px;
     transform: none;
